<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/score_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="136dp"
        android:text="Score: "
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score_view_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toEndOf="@+id/score_view_title"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_option1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:width="250sp"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/button_option4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_option2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:width="250sp"
        android:text="Button"
        android:textColorLink="#673AB7"
        app:layout_constraintBottom_toTopOf="@+id/finish_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_option3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:width="250sp"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/button_option2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_option4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:width="250sp"
        android:text="Button"
        android:textColorLink="#673AB7"
        app:layout_constraintBottom_toTopOf="@+id/button_option3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Question"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_view_title" />

    <CheckBox
        android:id="@+id/checkbox_option1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:background="@drawable/dotted_border"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="CheckBox"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_question" />

    <CheckBox
        android:id="@+id/checkbox_option2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/dotted_border"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="CheckBox"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_option1" />

    <CheckBox
        android:id="@+id/checkbox_option3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/dotted_border"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="CheckBox"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_option2" />

    <CheckBox
        android:id="@+id/checkbox_option4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/dotted_border"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="CheckBox"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_option3" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:width="250sp"
        android:text="Submit"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_option4" />

    <TextView
        android:id="@+id/question_type_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners"
        android:paddingLeft="15sp"
        android:paddingTop="5sp"
        android:paddingRight="15sp"
        android:paddingBottom="5sp"
        android:text="Single"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_question" />

    <TextView
        android:id="@+id/repeat_questions_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:background="@drawable/rounded_corners"
        android:paddingLeft="15sp"
        android:paddingTop="5sp"
        android:paddingRight="15sp"
        android:paddingBottom="5sp"
        android:text="Repeating incorrect questions"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textSize="30sp"
        android:textColor="@color/default_purple"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/score_view_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_view" />

    <Button
        android:id="@+id/finish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:width="250sp"
        android:background="@drawable/finish_button"
        android:text="Finish Quiz"
        android:textColor="#673AB7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="TextView"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>